--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,18 @@
     		<artifactId>mysql-connector-j</artifactId>
     		<version>8.3.0</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+   			<version>3.5.6</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>11.13.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
